--- a/index.html
+++ b/index.html
@@ -4,36 +4,55 @@
   <meta charset="UTF-8">
   <title> Web開発の練習１</title>
 </head>
-<body><h1>Hello World</h1>
+<body>
+    <br>
+    <h1>練習問題2.2</h1>
+    <br>
+    <h1>Hello World</h1>
     <h2>Hello World</h2>
     <h3>Hello World</h3>
     <ol>
         <li>ほげほげ</li>
         <li>ほにゃらら</li>
     </ol>
-  </body>
-  </html>
-    <dl><dt>作者</dt><dd>ジョン</dd>
-    <dd>ポール</dd><dd>ジョージ</dd><dd>リンゴ</dd></dl>
-    <dl><dtlang="ja"><dfn>色</dfn></dt>
-        <dtlang="en-US"><dfn>color</dfn></dt>
-        <dtlang="en-GB"><dfn>colour</dfn></dt>
+    <br>
+    <h1>練習問題2.3</h1>
+    <br>
+  <dl>
+<dt>作者</dt>
+<dd>ジョン</dd>
+<dd>ポール</dd>
+<dd>ジョージ</dd>
+<dd>リンゴ</dd>
+</dl>
+    <dl><dt lang="ja"><dfn>色</dfn></dt>
+        <dt lang="en-US"><dfn>color</dfn></dt>
+        <dt lang="en-GB"><dfn>colour</dfn></dt>
         <dd>可視光線の波長の長短によって人が視覚で感じ分けられる色覚・色刺激のこと。</dd></dl> 
     <p>ゲームの得点は以下の順序で計算されます。</p>
-    <dl><dt>金貨を獲得している場合</dt><dd>金貨一枚につき１０ポイント加算されます。</dd>
+    <dl>
+        <dt>金貨を獲得している場合</dt><dd>金貨一枚につき１０ポイント加算されます。</dd>
         <dt>銀貨を獲得している場合</dt><dd>銀貨一枚につき１ポイント加算されます。</dd>
         <dt>枚数に関わらず、金貨と銀貨の両方を獲得している場合</dt>
         <dd>ボーナスポイントとして２０ポイント加算されます。</dd>
-        <dt>それ以外の場合</dt><dd>ポイントは加算されません。</dd>
-        <table><caption><strong>お寿司をどこで食べるか？その長所と短所</strong>
-            <details><summary>このテーブルの説明</summary>
-                <p>以下のテーブルでは、２番目のカラムに寿司店のタイプが入れられています。
+        <dt>それ以外の場合</dt><dd>ポイントは加算されません。</dd></dl>
+       <br>
+       <h1>練習問題2.4</h1>
+        <table>
+        <caption>
+        <strong>お寿司をどこで食べるか？その長所と短所</strong>
+        <details>
+        <summary>このテーブルの説明</summary>
+        <p>以下のテーブルでは、２番目のカラムに寿司店のタイプが入れられています。
                     その左側にそのようなタイプのお店でお寿司を食べる場合の長所が、右側に短所が入れられています。</p>
-                </details></caption>
-                <thead><tr><th>長所</th><th>どこで食べるか</th>
-                    <th>短所</th></tr></thead>
-                    <tbody><tr><td>ネタにこだわり、技術が素晴らしい</td>
-                        <th>銀座の高級店</th><td>値段が時価で不安、予約が必要</td></tr>
+        </details>
+        </caption>
+        <thead>
+        <tr><th>長所</th><th>どこで食べるか</th><th>短所</th></tr>
+</thead>
+ <tbody>
+     <tr><td>ネタにこだわり、技術が素晴らしい</td><th>銀座の高級店
+     </th><td>値段が時価で不安、予約が必要</td></tr>
                         <tr><td>値段が良心的、気軽に手に取れる</td><th>回転寿司</th>
                             <td>ネタが解凍もの、休みの日は混む</td></tr></tbody></table> 
         <table><caption><strong>お寿司をどこで食べるか？その長所と短所</strong></caption>
@@ -42,6 +61,8 @@
                 <td>値段が時価で不安、予約が必要</td></tr><tr><th>回転寿司</th>
                     <td>値段が良心的、気軽に手に取れる</td><td>ネタが解凍もの、休みの日は混む</td></tr></tbody></table>
   <!--文字の大きさの練習-->
+  </body>
+</html>
 
  
 
