--- a/a.html
+++ b/a.html
@@ -7,3 +7,6 @@
     <br>
     <a href=“https:// www.josai.ac.jp/education/management/index.html /”>
         <imgsrc=“./image/keiei_small.jpg” alt=“城西大学ホームページ"></a>
+        
+<!DOCTYPE html>
+<html lang="ja"><head><meta charset="UTF-8"><title>アンカータグの練習</title></head><body><p>アンカータグの練習です。</p></body></html>
