--- a/index.html
+++ b/index.html
@@ -148,7 +148,16 @@
                     <p>
                     <label>宿題ファイル：<input type="file" name="syukudai"></label></p>
                     <p><input type="submit" value="送信"><input type="reset" value="リセット">
-
+<h1>練習問題3.1</h1>
+<a href="a.html">相対パスでリンクします</a>
+ <br>
+<a href="https://www.josai.ac.jp/education/management/index.html">
+絶対パスで城西大学経営学部へリンクします。</a>
+<br>
+<a href="mailto:zm19454@josai.ac.jp">自分宛メール</a>
+<br>
+<a href="https://www.josai.ac.jp/education/management/index.html/">
+<img　src="./image/keiei_small.jpg"alt="城西大学ホームページ"></a>
 
 </body>
 </html>
