--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li>ほげほげ</li>
         <li>ほにゃらら</li>
     </ol>
+    <a id=“abc”>ここがabcの場所</a>
     <br>
     <h1>練習問題2.3</h1>
     <br>
@@ -149,7 +150,7 @@
                     <label>宿題ファイル：<input type="file" name="syukudai"></label></p>
                     <p><input type="submit" value="送信"><input type="reset" value="リセット">
 <h1>練習問題3.1</h1>
-<a href="a.html">相対パスでリンクします</a>
+<a href=”a.html”>相対パスでリンクします</a>
  <br>
 <a href="https://www.josai.ac.jp/education/management/index.html">
 絶対パスで城西大学経営学部へリンクします。</a>
@@ -157,7 +158,26 @@
 <a href="mailto:zm19454@josai.ac.jp">自分宛メール</a>
 <br>
 <a href="https://www.josai.ac.jp/education/management/index.html/">
-<img　src="./image/keiei_small.jpg"alt="城西大学ホームページ"></a>
+<img src="./image/keiei_small.jpg" alt="城西大学ホームページ"></a>
+<br>
+<h1>練習問題3.2</h1>
+<a href="a.html" target="_blank">別画面を開いてリンクします</a><br>
+<a href="a.html" target="_self">リンク元と同じフレームにリンクします</a><br>
+<a href="a.html" target="_parent">ひとつ上の親フレームにリンクします</a><br>
+<a href="a.html" target="_top">フレームをすべて解除してリンクします</a><br>
+<a href="a.html" target="abc">abcという名前のフレームにリンクします</a><br>
+<h1>練習問題3.3</h1>
+<a href="#abc">abcと名前を付けた場所へリンクします</a><br>
+<a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a>
+<h1>練習問題3.4</h1>
+<a href="#abc">abcと名前を付けた場所へリンクします</a><br>
+<a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a>
+<h1>練習問題3.5</h1>
+<nav><ul><li>
+<a href=“https://www.josai.ac.jp/club/jyosisofuto.html”>女子ソフトボール部</a></li>
+<li><a href=“https://www.josai.ac.jp/club/ekiden_hakone.html”>男子駅伝部</a></li>
+<li><a href=“https://www.josai.ac.jp/club/ekiden_joshiekiden.html”>女子駅伝部</a></li>
+<li><a>クラブ・サークル活動</a></li></ul></nav> 
 
 </body>
 </html>
