--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title> Web開発の練習１</title>
-  <link rel="stylesheet" href="mystyle.css"> <!--この行を追加-->
-  <script src="myjs.js"></script> <!--この行を追加-->
+  <link rel="stylesheet" href="mystyle.css"> 
+  <script src="ex6-1.js"></script>
 </head>
 <body>
     <br>
@@ -52,7 +52,8 @@
         </details>
         </caption>
         <thead>
-        <tr><th class="important">長所</th><th>どこで食べるか</th><th>短所</th></tr>
+        <tr><th class="important">長所</th>
+            <th>どこで食べるか</th><th>短所</th></tr>
 </thead>
  <tbody>
      <tr><td>ネタにこだわり、技術が素晴らしい</td><th>銀座の高級店
@@ -190,6 +191,7 @@
 <br>
 <h1>イベントハンドラの練習</h1>
 <input type="button" value="ここをクリック" onclick="alert('Hello, Rika!');">
+<input type="button" value="ここをクリック" onclick="sayhello();">
 
 </body>
 </html>
