--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <title> Web開発の練習１</title>
   <link rel="stylesheet" href="mystyle.css"> 
   <script src="ex6-1.js"></script>
+  <script src="ex06-5.js"></script>
+  <script src="ex06-7.js"></script>
+  <script src="ex06-8.js"></script>
+
 </head>
 <body>
     <br>
@@ -192,7 +196,18 @@
 <h1>イベントハンドラの練習</h1>
 <input type="button" value="ここをクリック" onclick="alert('Hello, Rika!');">
 <input type="button" value="ここをクリック" onclick="sayhello();">
-
+<h1>変数の練習</h1>
+<input type="button" value="あいさつ" onclick="sayhello65();">
+<input type="button" value="太郎" onclick="taro65();">
+<input type="button" value="花子" onclick="hanako65();">
+<h1>引数の練習</h1>
+<input type="button" value="あいさつ" onclick="sayhello67();">
+<input type="button" value="太郎" onclick="someone('太郎');">
+<input type="button" value="花子" onclick="someone('花子');">
+<h1>JavaScriptによる変更の練習</h1>
+<input type="button" value="あいさつ" onclick="sayhello68();">
+<input type="button" value="太郎" onclick="taro68();">
+<input type="button" value="花子" onclick="hanako68();"><p id="who68">world</p>
 </body>
 </html>
     
