--- a/a.html
+++ b/a.html
@@ -1,12 +1,3 @@
-<a href=“a.html”>相対パスでリンクします</a>
-<br>
-<a href=“https://www.josai.ac.jp/education/management/index.html”>
-    絶対パスで城西大学経営学部へリンクします。</a>
-    <br>
-    <a href=“mailto:zm19454@josai.ac.jp”>自分宛メール</a>
-    <br>
-    <a href=“https:// www.josai.ac.jp/education/management/index.html /”>
-        <imgsrc=“./image/keiei_small.jpg” alt=“城西大学ホームページ"></a>
-        
-<!DOCTYPE html>
-<html lang="ja"><head><meta charset="UTF-8"><title>アンカータグの練習</title></head><body><p>アンカータグの練習です。</p></body></html>
+        <!DOCTYPE html>
+<html lang="ja"><head><meta charset="UTF-8"><title>アンカータグの練習</title></head><body><p>アンカータグの練習です。</p>
+<br><p>ここはwebの場所</p></body></html>
